--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -34,4 +34,8 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
