--- a/sass/layouts/_main.scss
+++ b/sass/layouts/_main.scss
@@ -1,3 +1,7 @@
+.main {
+    flex-grow: 1;
+}
+
 .main-box {
     display: grid;
     grid-template-columns: 1fr 3fr;
@@ -22,7 +26,6 @@
     padding: 10px;
 
     background-color: var(--background-color-btn);
-    ;
     text-shadow: var(--default-white-shadow);
     z-index: 1;
 
@@ -52,27 +55,15 @@
 .movie-box {
     display: grid;
     grid-template-columns: 280px 1fr;
-    grid-template-rows: 1fr 30%;
-    row-gap: 10px;
+    grid-template-rows: auto 1fr;
+    row-gap: 20px;
     column-gap: 20px;
-
-    @media screen and (max-width: 1465px) {
-        grid-template-rows: 1fr 28%;
-    }
-
-    @media screen and (max-width: 1355px) {
-        grid-template-rows: 1fr 33%;
-    }
-
-    @media screen and (max-width: 1005px) {
-        grid-template-rows: 1fr 35%;
-    }
 
     @media screen and (max-width: 768px) {
         grid-template-columns: 220px 1fr;
-        grid-template-rows: 1fr 50%;
+        grid-template-rows: auto 1fr;
         column-gap: 10px;
-        row-gap: 5px;
+        row-gap: 10px;
     }
 
     @media screen and (max-width: 530px) {
@@ -132,7 +123,6 @@
 }
 
 .description-text {
-
     &__hidden-laptop {
         @media screen and (max-width: 1000px) {
             display: none;
